loaded the dataset

--- a/AE_stl10_CBloss.ipynb
+++ b/AE_stl10_CBloss.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKprMiRbQ022XOlF+fahjY",
+      "authorship_tag": "ABX9TyPxMb/wRKb+/Ga1diUqmPK5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 42,
       "metadata": {
         "id": "8JhohIS87_QI"
       },
@@ -45,20 +45,24 @@
         "from keras import backend as K\n",
         "\n",
         "import os\n",
+        "import random\n",
         "import matplotlib.pyplot as plt"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "input_size = (48,48,3)\n",
+        "img_ht = 48\n",
+        "img_wd = 48\n",
+        "\n",
+        "input_size = (img_ht,img_wd,3)\n",
         "latent_dim = 256\n",
         "batch_size = 512"
       ],
       "metadata": {
         "id": "Pc-MbMT38c2M"
       },
-      "execution_count": 2,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -195,7 +199,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ds_to_np is a list of dictionaries where the key:value pairs are the 'image':img_ndarray, 'label'=-1. We want to collect all these arrays and form a tensor/array."
+        "ds_to_np is a list of dictionaries where the key:value pairs are the 'image':img_ndarray, 'label'=-1. We want to collect all these arrays and form a tensor/array. There are 100k images. We'll use 50k of them in the training set, 25k for validation, and 25k for the test set."
       ],
       "metadata": {
         "id": "Vs1dSYGeGqe1"
@@ -203,9 +207,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "random.seed(100)\n",
+        "random.shuffle(ds_to_np)                                    # random permutation in place\n",
+        "img_train = np.array([x['image'] for x in ds_to_np[:50000]])\n",
+        "img_valid = np.array([x['image'] for x in ds_to_np[50000:75000]])\n",
+        "img_test = np.array([x['image'] for x in ds_to_np[75000:]])\n",
+        "\n",
+        "img_train = img_train/255\n",
+        "img_valid = img_valid/255\n",
+        "img_test = img_test/255"
+      ],
       "metadata": {
         "id": "RDUYYwKbMsqz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(img_train.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_inAvf3KShmj",
+        "outputId": "ae47c8bb-1b10-4ff9-810b-57f8cb2ac0f1"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(50000, 96, 96, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oSKEtqceW8y5"
       },
       "execution_count": null,
       "outputs": []
