--- a/AE_cifar10_mse_HeNormal.ipynb
+++ b/AE_cifar10_mse_HeNormal.ipynb
@@ -7,12 +7,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AtSourav/AE-n-VAE-with-CB-loss-on-stl10/blob/main/AE_cifar10_mse_HeNormal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AtSourav/L2-vs-L1-vs-CB-loss-in-deep-CNN-based-AE-on-cifar10/blob/main/AE_cifar10_mse_HeNormal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "HcdmogtsixSK"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "HiPKvQXNj9RO"
       },
@@ -53,8 +53,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Loading the dataset**"
+      ],
+      "metadata": {
+        "id": "SDTeMP-NAzcQ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "W_FvXdyBj-Qj",
         "colab": {
@@ -288,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "85YcMIo3k4NU"
       },
@@ -300,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "jwPoO9NTkCQq"
       },
@@ -314,8 +323,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Defining the model**"
+      ],
+      "metadata": {
+        "id": "a-Dgr7_2A3wl"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -519,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -735,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -775,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "zlS-eqQ-kKwZ"
       },
@@ -785,8 +803,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Training**"
+      ],
+      "metadata": {
+        "id": "4XO94SuIA9hJ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -962,7 +989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1037,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "v1Zn4acnom4s",
         "colab": {
@@ -1067,6 +1094,15 @@
         "plt.legend(['train', 'val'], loc='upper left')\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Plotting some reconstructed images alongwith the originals**"
+      ],
+      "metadata": {
+        "id": "LjeUXhySBBl1"
+      }
     },
     {
       "cell_type": "code",
@@ -1103,7 +1139,7 @@
       "metadata": {
         "id": "HezcQ2lwfWuR"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1119,7 +1155,7 @@
         "id": "xuyk2lU1fW59",
         "outputId": "e2a2c32e-ddf6-42a2-91f0-4cf576fa618b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1146,7 +1182,7 @@
         "id": "8Uik3UT0foQ4",
         "outputId": "298f5246-c33d-493e-9f3e-52a53eea292e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1171,12 +1207,9 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "machine_shape": "hm",
       "provenance": [],
-      "gpuType": "V100",
-      "authorship_tag": "ABX9TyMVu/ZrwefhQkJrcK06U0Xc",
+      "authorship_tag": "ABX9TyMhBfNs8lRgFVKRpDOHGD5y",
       "include_colab_link": true
     },
     "kernelspec": {
