created some sections

--- a/AE_cifar10_L1_HeNormal.ipynb
+++ b/AE_cifar10_L1_HeNormal.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "V100",
-      "authorship_tag": "ABX9TyOrhxyFgDWxz2Zmxzd70C9d",
+      "authorship_tag": "ABX9TyM5g/18Fa+pEt5kR8DjNg7m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -26,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AtSourav/AE-n-VAE-with-CB-loss-on-stl10/blob/main/AE_cifar10_L1_HeNormal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AtSourav/L2-vs-L1-vs-CB-loss-in-deep-CNN-based-AE-on-cifar10/blob/main/AE_cifar10_L1_HeNormal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "8_LjqsreEN_h"
       },
@@ -69,8 +66,17 @@
       "metadata": {
         "id": "FQQuJeenEZIA"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Loading the dataset**"
+      ],
+      "metadata": {
+        "id": "kvNeoCZ1CiPs"
+      }
     },
     {
       "cell_type": "code",
@@ -81,7 +87,7 @@
       "metadata": {
         "id": "FDyrTWb1Ebc-"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +99,7 @@
       "metadata": {
         "id": "Iy4eHZjbF_sX"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,8 +114,17 @@
       "metadata": {
         "id": "3vMAUARFEd_m"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Building the model**"
+      ],
+      "metadata": {
+        "id": "iVI3oF69Cmfo"
+      }
     },
     {
       "cell_type": "code",
@@ -199,7 +214,7 @@
         "id": "-ZHQQFmvEgu7",
         "outputId": "b5fc77a1-48f9-4ddb-d6d3-0a95ee1575ab"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,7 +419,7 @@
         "id": "S4GxBETXEjWK",
         "outputId": "f1199193-3b1d-416a-a804-0b0cffcfced1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +561,7 @@
         "id": "1uKIslGKEnD1",
         "outputId": "5c6589ff-c3fb-43e8-bd2f-7cdabd036b64"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,6 +585,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Defining the Continuous Bernoulli loss function**"
+      ],
+      "metadata": {
+        "id": "BldAxsWACvT8"
+      }
     },
     {
       "cell_type": "code",
@@ -604,8 +628,17 @@
       "metadata": {
         "id": "LHpCuAqvE9D2"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Training**"
+      ],
+      "metadata": {
+        "id": "X42YW5bRC1nx"
+      }
     },
     {
       "cell_type": "code",
@@ -615,7 +648,7 @@
       "metadata": {
         "id": "oCFMzx1hyIVu"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +665,7 @@
         "id": "l_7WQJLaEqiD",
         "outputId": "3311ea5b-4d5f-402b-9328-f8a590d14078"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -687,7 +720,7 @@
         "id": "TsWeYpQi1Qrk",
         "outputId": "48372310-5c96-40f7-8ced-a83f39eb82dd"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,7 +933,7 @@
         "id": "SK_k-sNsLgbQ",
         "outputId": "6d7485e8-1e82-4102-a766-dad7b8ad939d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -933,7 +966,7 @@
         "id": "NTC75a3NOjjB",
         "outputId": "38c93018-96d8-4df6-c0fe-9c3cc542f460"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -946,6 +979,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Plotting some of the original images and the corresponding reconstructions**"
+      ],
+      "metadata": {
+        "id": "F8737lsTC9mF"
+      }
     },
     {
       "cell_type": "code",
@@ -982,7 +1024,7 @@
       "metadata": {
         "id": "p7rSLR3GO58z"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +1040,7 @@
         "id": "dCd_JKe6PCjE",
         "outputId": "591d68a2-c862-4420-e081-93f2b57ecefa"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1025,7 +1067,7 @@
         "id": "HoFwHYbWPGDT",
         "outputId": "706e66ac-dc54-4713-fba6-1a9b2cbd3c76"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1040,15 +1082,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "NG8sDvxLPXkP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "We waited for the network (with the same architecture that we optimised with mse loss) to start overtraining and then the results are above. The reconstructed images have equally good colour depth as with mse loss, but they are even more blurry it seems. So at least from these experiments mse or CB loss seem to be better options than L1 loss."
@@ -1056,15 +1089,6 @@
       "metadata": {
         "id": "g2aCXrUnPuDz"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SVYqpHxyQXa8"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
