--- a/AE_cifar10_CBloss.ipynb
+++ b/AE_cifar10_CBloss.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "hxAjdQjfJv-M"
       },
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "-StTMluVJ_22"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "xiX02aILKEY9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "H7-zGTA1LcND"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "wS_hLbBZKHG9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -200,7 +200,7 @@
         "id": "CM9i_AG8KIBo",
         "outputId": "2c9f432d-581d-48fd-a1a5-144a295c17b4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +405,7 @@
         "id": "BkWOcV1BKMdK",
         "outputId": "7cb299d4-2e82-483c-8706-3eb1ee3e2ab7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
         "id": "EymN9-o6KR4Q",
         "outputId": "e331a2ab-818f-4a16-cc3f-1fb5f6bea7f0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +606,7 @@
       "metadata": {
         "id": "F3K7IuG0KXev"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -617,7 +617,7 @@
       "metadata": {
         "id": "9i3dCMjOM-6Q"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -635,7 +635,7 @@
         "id": "eD3cjHavKc0-",
         "outputId": "f733887d-5621-459c-83a6-953f8d014d02"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,7 +860,7 @@
         "id": "ILTSj_GVL3Z3",
         "outputId": "5e204183-dfc2-490a-f216-474eac10bba3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,7 +1018,7 @@
         "id": "bmiwuWMtR4sk",
         "outputId": "4b256f76-2e5e-43ac-9b80-066de2b6375c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1062,13 +1062,12 @@
         "    else:\n",
         "      img = img_recon[j*4 + (i%9) - 5]\n",
         "      plt.imshow(img)\n",
-        "      plt.axis('off')\n",
-        ""
+        "      plt.axis('off')\n"
       ],
       "metadata": {
         "id": "mCngI2YRT2h7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1084,7 +1083,7 @@
         "id": "F8Ao_DH1UobW",
         "outputId": "36a91807-9d83-4a87-a8aa-8b6dbb4e1f6a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1111,7 +1110,7 @@
         "id": "-J2R9MORUtY5",
         "outputId": "d2109480-c0d4-47d1-80e1-4db153048d92"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
